--- a/kongtiao/index.html
+++ b/kongtiao/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#409EFF" />
   <meta name="description" content="Air Conditioner" />
@@ -22,9 +22,9 @@
         document.documentElement.classList.toggle('dark', true)
     })()
   </script>
-  <script type="module" crossorigin src="/assets/index.d18e0018.js"></script>
-  <link rel="stylesheet" href="/assets/index.6cd16106.css">
-<link rel="manifest" href="/manifest.webmanifest"></head>
+  <script type="module" crossorigin src="./assets/index.d18e0018.js"></script>
+  <link rel="stylesheet" href="./assets/index.6cd16106.css">
+<link rel="manifest" href="./manifest.webmanifest"></head>
 
 <body>
   <div id="root"></div>
