--- a/windows/11/index.html
+++ b/windows/11/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Windows 11" />
-<script type="text/javascript">window.onload=function(){document.getElementById("mainFrame").src="https://win11.blueedge.me"}</script>
+
+<script type="text/javascript">window.onload=function(){window.location.href='https://win11.blueedge.me';}</script>
 </head>
 <body style="margin:0;padding:0;border:none;outline:none">
 
-<iframe id="mainFrame" style="width:100%;height:100%" frameborder="no" border="0" scrolling="auto" src=""></iframe>
 
 </body>
 </html>
