--- a/index.html
+++ b/index.html
@@ -169,6 +169,27 @@
         <!--卡片END-->
         </div>
 
+        <div class="mdui-col-lg-3 mdui-col-md-4 mdui-col-xs-6 link-space" id = "id_3" link-title = "坦克大战" link-url = "https://yozoo.app/battlecity">
+        <!--定义一个卡片-->
+        <div class="mdui-card link-line mdui-hoverable">
+            <!-- 如果是私有链接，则显示角标 -->
+                        <!-- 角标END -->
+            <a href="https://yozoo.app/battlecity" target="_blank" title = "坦克大战">
+              <div class="mdui-card-primary" style = "padding-top:16px;">
+                  <div class="mdui-card-primary-title link-title">
+                    <img src="https://favicon.rss.ink/v1/aHR0cHM6Ly9hbGl5dW5wYW4xLmNvbQ==" alt="HUAN" width="16" height="16">
+                    <span class="link_title">坦克大战</span> 
+                  </div>
+
+              </div>
+            </a>
+            
+          
+          <!-- 卡片的内容end -->
+          <div class="mdui-card-content mdui-text-color-black-disabled" style="padding-top:0px;"><span class="link-content">坦克大战 - 目前只支持电脑端键盘[W、A、S、D、空格]控制 </span></div>
+        </div>
+        <!--卡片END-->
+        </div>
 
             <div class="mdui-col-lg-3 mdui-col-md-4 mdui-col-xs-6 link-space" id = "id_3" link-title = "飞机躲避障碍" link-url = "https://yozoo.app/feiji">
         <!--定义一个卡片-->
